Published 0.3.0 to Maven central !